# assignment_cpv

./: .gitignore  README.md  pyproject.toml
assignment_face/: .env  .env.example  HaarCascade_Flow.drawio  README.md  __init__.py  app.py  requirements.txt
assignment_face/config/: __init__.py  config.py  settings.py
assignment_face/core/: __init__.py  attendance.py  camera.py  crop_video.py  detector.py  detector_original.py  detector_remake.py  preprocess.py  recognizer.py  register.py
assignment_face/database/: attendance.csv  students.json
assignment_face/docs/: version_detect_2.md
assignment_face/models/: label_map.json  lbph_fallback.npz  lbph_model.npz  test.py
assignment_face/pages/: 1_Live_Attendance.py  2_Register_Student.py  3_Manage_Students.py
assignment_face/services/: __init__.py  live_attendance.py  registration.py  student_management.py
assignment_face/ui/: __init__.py  app.py  bootstrap.py  processors.py  shared_camera.py  state.py
assignment_face/ui/pages/: home.py  (+3 more)
assignment_face/utils/: __init__.py  file_utils.py  image_utils.py  time_utils.py
assignment_face_v2/: .env  .env.example  __init__.py  app.py
assignment_face_v2/config/: __init__.py  config.py
assignment_face_v2/core/: __init__.py  attendance.py  camera.py  detector.py  recognizer.py  register.py
assignment_face_v2/database/: attendance.csv  students.json
assignment_face_v2/models/: label_map.json  lbph_fallback.npz  lbph_model.npz
assignment_face_v2/pages/: 1_Live_Attendance.py  2_Register_Student.py
assignment_face_v2/utils/: __init__.py  file_utils.py
