[project]
name = "cpv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2026.5.0",
    "huggingface-hub>=1.19.0",
    "ipykernel>=7.2.0",
    "ipympl>=0.10.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "opencv-contrib-python>=4.13.0.92",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.46.0",
    "streamlit-webrtc>=0.63.11",
    "streamlit>=1.46.0",
    "streamlit-webrtc>=0.63.11",
    "opencv-contrib-python>=4.13.0.92",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "python-dotenv>=1.1.1",
]
